--- a/railway.toml
+++ b/railway.toml
@@ -3,5 +3,6 @@ builder = "nixpacks"
 
 [deploy]
 startCommand = "python music_tracker_cron.py"
-# Run at 11:15am, 3:15pm, 5:15pm, 7:15pm, 11:15pm
-cronSchedule = "15 11,15,17,19,23 * * *"
+# Run at Beijing/Singapore time: 11:15am, 3:15pm, 5:15pm, 7:15pm, 11:15pm
+# UTC time (minus 8 hours): 3:15am, 7:15am, 9:15am, 11:15am, 3:15pm
+cronSchedule = "15 3,7,9,11,15 * * *"
