--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ['python311']
 cmds = ['pip install -r requirements.txt']
 
 [start]
-cmd = 'python music_tracker_bot.py'
+cmd = 'python music_tracker_cron.py'
