--- a/.github/workflows/music-tracker.yml
+++ b/.github/workflows/music-tracker.yml
@@ -49,8 +49,12 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git add tracked_releases.json
         git diff --quiet && git diff --staged --quiet || git commit -m "Update tracked releases [skip ci]"
-        git push
-      continue-on-error: true
+    
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
     
     - name: Upload tracked releases (backup)
       uses: actions/upload-artifact@v4
